--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,6 +12,16 @@
 
   <div id="game-container">
     <div grid ng-model='ctrl.game' class="row"></div>
+
+     <div id="game-over" 
+        ng-if="ctrl.game.gameOver"
+        class="row game-overlay">
+      Game over
+      <div class="lower">
+        <a class="retry-button" ng-click='ctrl.newGame()'>Try again</a>
+      </div>
+    </div>
+
   </div>
   
 
