--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,28 +1,41 @@
-<!-- app/views/main.html -->
 <div id="content" ng-controller='GameController as ctrl'>
-  
+  <!-- heading -->
   <div id="heading" class="row">
     <h1 class="title">2048</h1>
-    
     <div class="scores-container">
-      <div class="score-container">{{ ctrl.game.currentScore }}</div>
-      <div class="best-container">{{ ctrl.game.highScore }}</div>
+      <div class="score-container">{{ctrl.game.currentScore}}</div>
+      <div class="best-container">{{ctrl.game.highScore}}</div>
     </div>
   </div>
 
+  <!-- instructions -->
+  <div id="instructions" class="row">
+    Join the numbers and get to the <strong>2048</strong> tile!
+    <button ng-click='ctrl.newGame()' class="restart-button">New game</button>
+  </div>
+  
   <div id="game-container">
     <div grid ng-model='ctrl.game' class="row"></div>
 
-     <div id="game-over" 
-        ng-if="ctrl.game.gameOver"
-        class="row game-overlay">
+    <div id="game-over" ng-if="ctrl.game.gameOver" class="row game-overlay">
       Game over
+
       <div class="lower">
         <a class="retry-button" ng-click='ctrl.newGame()'>Try again</a>
       </div>
     </div>
 
+    <div id="win" ng-if="ctrl.game.win" class="row game-overlay">
+      You win!
+
+      <div class="lower">
+        <a class="retry-button" ng-click='ctrl.newGame()'>Try again</a>
+      </div>
+    </div>
   </div>
-  
+
+  <p class="game-explanation">
+    <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+  </p>
 
 </div>
